# HLorf

./: .gitattributes  .gitignore
.github/workflows/: build.yml
containers/: build_containers.sh  test_containers.sh
containers/orf/: Dockerfile  Dockerfile.blast  blast.Dockerfile  chunk.Dockerfile  net.Dockerfile  samba.Dockerfile  tai.Dockerfile
containers/predict/: Dockerfile.predict
modules/blast/: Cargo.toml
modules/blast/src/: cli.rs  consts.rs  main.rs  utils.rs
modules/chunker/: Cargo.toml
modules/chunker/src/: cli.rs  main.rs
modules/nets/: pyproject.toml
modules/nets/TRANSAID/: README.md  transaid.py
modules/nets/TRANSAID/src/: __init__.py  data_structs.py  models.py  orf_score.py  predictor.py  utils.py
modules/nets/netstart2/: netstart2.py
modules/nets/netstart2/scripts/data_analysis/model_embeddings/: PCA_pretrained_esm2_embeddings.py
modules/nets/netstart2/scripts/data_analysis/preliminary_analyses/: extract_info_remove_partial.py
modules/nets/netstart2/scripts/data_preparation/: check_datasets.py  create_benchmark_testset.py  create_genomic_testset.py  create_model_datasets.py  extract_annotations.py  extract_intergenic.py  extract_introns.py  extract_mRNA.py  map_softmasking.py  map_taxonomy.py  mask_sequences.ipynb  partition_sequences.py  sort_taxonomy.py
modules/nets/netstart2/scripts/evaluation/: benchmark_transcript_level.ipynb  calculate_similarity.py  proces_preds.ipynb  species_input_impact.ipynb
modules/nets/netstart2/scripts/modelling/: finetune_ESM2.py  hyperparameter_tuning_netstart.py  train_netstart.py  train_netstart_groups.py
modules/nets/netstart2/scripts/modelling_ablations/: hyperparameter_tuning_netstart1.py  train_esm2_tuned.py  train_netstart1.py
modules/orf/: Cargo.toml  pyproject.toml
modules/orf/src/: blast.rs  chunk.rs  cli.rs  consts.rs  lib.rs  main.rs  nets.rs  samba.rs  tai.rs  utils.rs
modules/orf/tai/translationai/: __init__.py  __main__.py  fa_to_h5_converter.py
modules/orf/tai/translationai.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
modules/predict/: predict.py  pyproject.toml
modules/predict/model/: orf_classifier_model.json
modules/tai/: Cargo.toml
modules/tai/src/: cli.rs  consts.rs  main.rs
modules/tai/tai/translationai/: constants.py  utils.py
modules/tai/tai/translationai.egg-info/: PKG-INFO
src/: main.nf  nextflow.config
src/modules/blast/: environment.yml  main.nf
src/modules/chunker/: environment.yml  main.nf
src/modules/concat/: environment.yml  main.nf
src/modules/email/: main.nf
src/modules/genomemask/seleno/: main.nf
src/modules/join/: environment.yml  main.nf
src/modules/netstart/: environment.yml  main.nf
src/modules/predict/: environment.yml  main.nf
src/modules/rnasamba/: environment.yml  main.nf
src/modules/transaid/: environment.yml  main.nf
src/modules/translation/: environment.yml  main.nf
src/modules/wget/: main.nf
src/subworkflows/candidates/: main.nf
src/subworkflows/predict_orfs/: main.nf
src/subworkflows/xorf/: main.nf
