[package]
name = "blast"
version = "0.0.3"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
time = "0.3.36"
memmap2 = "0.9.5"
dashmap = { version = "6", features = ["rayon"] }
smol_str = "0.3"
memchr = "2.7.4"
hashbrown = { version = "0.16", features = ["rayon"] }
rayon = "1.10.0"
regex = "1.11.1"
genepred = { version = "0.0.8", features = ["rayon", "mmap"] }


[profile.release]
lto = true
opt-level = 3
