[package]
name = "chunker"
version = "0.0.1"
edition = "2024"
authors = ["alejandrogzi <alejandrxgzi@gmail.com>"]

[dependencies]
genepred = { version = "0.0.8", features = ["mmap", "rayon"] }
rayon = "1.5.1"
twobit = "0.2.1"
clap = { version = "4.1.4", features = ["derive"] }
memmap2 = "0.9.5"
memchr = "2.7.4"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
