[project]
name = "nets"
version = "0.0.1"
description = "NetStart2 and Transaid models"
authors = [
    { name = "Alejandro Gonzales-Irribarren", email = "alejandrxgzi@gmail.com" },
]
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10,<3.13"

dependencies = [
    "torch==1.12.1",
    "numpy==1.23.5",
    "pandas==2.0.3",
    "tqdm==4.62.3",
    "transformers==4.36.0",
    "huggingface_hub>=0.20.3",
    "biopython>=1.78",
    "scikit-learn>=0.24.0"
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["netstart/netstart2.py"]
